# templates

./: hsOpt  init.d
hs/: Makefile  name.cabal
hs/src/: Main.hs
html/: a.html
sh/src/: name
