name:            <name>
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        <syn>
build-type:      Simple
build-depends:   base, haskell98

executable:      <name>
main-is:         Main.hs
hs-source-dirs:  src

exposed-modules: <name>
hs-source-dirs:  src
